# satnin

./: CMakeLists.txt  README.md  test
aidge/: Dockerfile  docker-compose.yml
aidge/app/: main.py  process.py
